# django-project-setup

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  worker.sh
api/: urls.py
api/health/: urls.py  views.py
api/users/: serializers.py  urls.py  viewsets.py
apps/users/: admin.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: __init__.py  base.py  local.py  production.py
tests/: conftest.py
tests/api/: test_health.py  test_users.py
tests/apps/: test_users.py
utils/: admin.py  exception_handler.py  exceptions.py  fields.py  files.py  middleware.py  models.py  random.py  serializers.py  viewsets.py
