[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Rovshen Tagangylyjov <rovshentagangylyjov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
django-redis = {extras = ["hiredis"], version = "^6.0.0"}
django-filter = "^25.2"
celery = "^5.5.1"
python-dotenv = "^1.1.0"
django-celery-results = "^2.6.0"
django-dbbackup = "^5.0.0"
django-auditlog = "^3.3.0"
django-modeltranslation = "^0.19.17"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.3.0"}
django-cachalot = "^2.8.0"
django-unfold = "^0.67.0"
pillow = "^11.2.1"
django-imagekit = "^5.0.0"
django-celery-email = "^3.0.0"
djangorestframework-simplejwt = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8-isort = "^6.1.2"
django-debug-toolbar = "^5.1.0"
pylint = "^3.3.6"
pylint-django = "^2.6.1"
black = "^25.1.0"


[tool.poetry.group.production.dependencies]
gunicorn = {extras = ["gevent"], version = "^23.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = 'black'
multi_line_output = 3
