[project]
name = "project"
version = "0.1.0"
description = ""
authors = [{ name = "Rovshen Tagangylyjov", email = "rovshentagangylyjov@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "django-cors-headers>=4.9.0",
    "psycopg[binary]>=3.2.2",
    "drf-spectacular[sidecar]>=0.29.0",
    "django-redis[hiredis]>=6.0.0",
    "django-filter>=25.2",
    "celery>=5.6.2",
    "python-dotenv>=1.2.1",
    "django-celery-results>=2.6.0",
    "django-dbbackup>=5.1.0",
    "django-auditlog>=3.4.1",
    "django-modeltranslation>=0.19.19",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "django-unfold>=0.75.0",
    "pillow>=12.1.0",
    "django-imagekit>=6.0.0",
    "djangorestframework-simplejwt>=5.5.1",
    "django-celery-email>=3.0.0",
    "djangorestframework-stubs>=3.16.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "flake8-isort>=7.0.0",
    "django-debug-toolbar>=6.1.0",
    "pylint>=4.0.4",
    "pylint-django>=2.7.0",
    "black>=25.12.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]
production = [
    "gunicorn[gevent]>=23.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ['py314']

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["apps", "api", "utils"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
