[project]
name = "project"
version = "0.1.0"
description = ""
authors = [{ name = "Rovshen Tagangylyjov", email = "rovshentagangylyjov@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "django-cors-headers>=4.9.0",
    "psycopg[binary]>=3.3.3",
    "drf-spectacular[sidecar]>=0.29.0",
    "django-redis[hiredis]>=6.0.0",
    "django-filter>=25.2",
    "celery>=5.6.3",
    "python-dotenv>=1.2.2",
    "django-celery-results>=2.6.0",
    "django-dbbackup>=5.2.0",
    "django-auditlog>=3.4.1",
    "django-modeltranslation>=0.20.2",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "django-unfold>=0.87.0",
    "pillow>=12.2.0",
    "django-imagekit>=6.1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "django-celery-email>=3.0.0",
    "djangorestframework-stubs>=3.16.9",
    "celery-types>=0.26.0",
    "django-celery-beat>=2.9.0",
    "cryptography>=46.0.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "flake8-isort>=7.0.0",
    "django-debug-toolbar>=6.2.0",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "black>=26.3.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
    "factory-boy>=3.3.3",
]
production = [
    "gunicorn[gevent]>=25.3.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ['py314']

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["apps", "api", "utils"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
